<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_vault">

    <fragment
        android:id="@+id/navigation_vault"
        android:name="br.com.cassianojunior.passwordmanager.ui.vault.VaultFragment"
        android:label="@string/title_vault"
        tools:layout="@layout/fragment_vault" />

    <fragment
        android:id="@+id/navigation_tools"
        android:name="br.com.cassianojunior.passwordmanager.ui.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="br.com.cassianojunior.passwordmanager.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>