<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tools.ToolsFragment"
    android:background="#EBEBEB"
    android:padding="16dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/tools_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_gen_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        />

        <TextView
            android:id="@+id/label_gen_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_generated_password"
            app:layout_constraintTop_toBottomOf="@id/tools_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_gen_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:id="@+id/txt_password_generated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_placeholder_generated_password"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:gravity="center"
            android:textSize="17sp"
            android:padding="16dp"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/label_length_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_label_length"
        app:layout_constraintTop_toBottomOf="@id/card_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/label_length_numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        app:layout_constraintTop_toBottomOf="@id/card_password"
        app:layout_constraintLeft_toRightOf="@id/label_length_password"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:textSize="16sp"
        android:layout_marginStart="4dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_length_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/txt_label_min_length"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="8dp"/>

            <SeekBar
                android:id="@+id/seek_password_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="32"
                android:min="4"
                android:padding="16dp"
                tools:targetApi="o"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="28dp"
                android:layout_marginLeft="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txt_label_max_length"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/label_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_label_settings"
        app:layout_constraintTop_toBottomOf="@id/card_length"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_include_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_include_numbers"
            android:textSize="18sp"
            android:padding="8dp"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_include_letters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_include_numbers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_include_letters"
            android:textSize="18sp"
            android:padding="8dp"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:checked="true"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_include_symbols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_include_letters"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_include_symbols"
            android:textSize="18sp"
            android:padding="8dp"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_symbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_generate_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_generate_password"
        app:layout_constraintTop_toBottomOf="@id/card_include_symbols"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>